# lingopal-reference

./: .gitignore  README.md  pyproject.toml
examples/: run_client.py  schedule_stream.py  start_stream.py
examples/translation_transcription_examples/: README_client.md  env_example.txt  s3_example.py  setup.py  transcribe_and_translate.py  translate_only_s3.py
examples/translation_transcription_examples/downloads/061379c8-d03b-491c-beb6-b8b567843954/: translation_de.txt  translation_es.txt  translation_fr.txt
examples/translation_transcription_examples/downloads/4ce8b506-3648-4c24-96fb-14b6ddbb70f4/: diarization.srt  transcript.srt
lingopal_ws_client/: client.py
